--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "dev": "node scripts/dev.js reactivity -f esm "
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -13,5 +15,8 @@
     "esbuild": "^0.25.0",
     "minimist": "^1.2.8",
     "typescript": "^5.7.3"
+  },
+  "dependencies": {
+    "vue": "^3.5.13"
   }
 }
