reactive避免重复代理； reactive避免代理proxy对象

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
-    "@vue/shared": "^3.5.25"
+    "@vue/shared": "^3.5.25",
+    "vue": "^3.5.25"
   }
 }
