--- a/packages/runtime-dom/package.json
+++ b/packages/runtime-dom/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@vue/reactivity",
+  "name": "@vue/runtime-dom",
   "version": "1.0.0",
-  "module": "dist/reactivity.esm-bundler.js",
-  "main": "dist/reactivity.cjs.js",
-  "unpkg": "dist/reactivity.global.js",
+  "module": "dist/runtime-dom.esm-bundler.js",
+  "main": "dist/runtime-dom.cjs.js",
+  "unpkg": "dist/runtime-dom.global.js",
   "buildOptions": {
-    "name": "VueReactivity",
+    "name": "RuntimeDOM",
     "formats": [
       "esm-bundler",
       "esm-browser",
