--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@vue/reactivity": "^3.5.26",
+    "@vue/runtime-core": "^3.5.26",
     "@vue/shared": "^3.5.25",
-    "vue": "^3.5.25"
+    "vue": "^3.5.26"
   }
 }
